# hand_eye_calibration

./: CMakeLists.txt  README.md  package.xml  result.txt
config/: apriltag_bundle_settings.yaml  apriltag_bundle_tags.yaml
launch/: apriltag_bundle_start.launch  apriltag_single_start.launch  aruco_bundle.launch  aruco_bundle_start.launch  aruco_single_start.launch  charuco_start.launch  checkerboard_start.launch
scripts/: aruco_bundles_detection.py  aruco_bundles_pose_estimate.py  automatic_calib_pose_preset.py  automatic_calib_pose_set.py  automatic_hand_to_eye_calib.py  automatic_hand_to_eye_calib_single.py  charuco_detection.py  checkerboard_detection.py  checkerboard_pose_estimate.py  easy_hand_to_eye_calib.py  generate_aruco_bundles.py  generate_charuco.py  hand_to_eye_calib.py  hand_to_eye_calib_bundle.py  hand_to_eye_calib_single.py  marker_detection.py  result_analysis.py  utils.py
yaml/: ground_truth_100cm.yaml  ground_truth_10degrees.yaml  ground_truth_125cm.yaml  ground_truth_150cm.yaml  ground_truth_200cm.yaml  ground_truth_20degrees.yaml  ground_truth_30degrees.yaml  ground_truth_40degrees.yaml  ground_truth_75cm.yaml  ground_truth_no_occlusion.yaml
